--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,8 @@
       "build": "tsc",
       "prisma:generate": "prisma generate",
       "prisma:migrate": "prisma migrate dev",
-      "prisma:seed": "ts-node prisma/seed.ts"
+      "prisma:seed": "ts-node prisma/seed.ts",
+    "setup": "npm run prisma:generate && npm run prisma:migrate && npm run prisma:seed && npm run build"
     },
     "dependencies": {
       "@prisma/client": "^4.8.0",
